Added a few keywords to composer.

--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,6 @@
     },
     "autoload": {
         "files": ["src/Render.php"]
-    }
+    },
+    "keywords": ["view", "template", "templating", "renderer"]
 }
