--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,8 @@ language: php
 php:
   - 5.5
   - 5.4
+
+before_script:
+  - composer install --prefer-source --dev
+    
 script: phpunit -v --configuration tests/phpunit.xml
